@@ -15,7 +15,9 @@ Install instructions
 ```bash
 git clone https://github.com/Lab4/Dendrite.git
 cd Dendrite
-mvn tomcat7:run
+$TITAN/bin/gremlin.sh -e ./bin/initialize-graph.groovy
+hadoop -fs -put src/main/groovy/org/lab41/dendrite/dendrite-import.groovy
+MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128m" mvn tomcat7:run -Pmaven.tomcat.port=8000
 ```
 
 Required Dependencies
